# HDC

./: .gitignore  CMakeLists.txt  DataGrabber.ipynb  Encoder.cc  Encoder.h  HDC.c  HDC.cc  HDC.h  README.md  cleanup  database connection  gtest.cpp  hdc_host v6.ipynb  hdc_host.ipynb  hdc_v6.bit  hdc_v6.hwh  main.c  main.cc  on_board_main.ipynb  run_hls.tcl
DataBase/: classes.csv  similarity.py
Documentation/: Final_Report.docx
src/: CMakeLists.txt  HDC.c  HDC.h  HDC_HLS.c  HDC_HLS.cc  HDC_HLS.h
tests/: CMakeLists.txt  gtest.cpp
