CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

project(HDC)

SET(CMAKE_PREFIX_PATH ~/deps/libtorch)

FIND_PACKAGE(Torch REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")

ADD_EXECUTABLE(${PROJECT_NAME} main.cc Encoder.cc HDC.cc)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} "${TORCH_LIBRARIES}")

SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 14)