CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

SET(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")

PROJECT(HDC)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/DataBase/mnist_train.csv 
    ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/DataBase/mnist_test.csv 
    ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)

ADD_EXECUTABLE(${PROJECT_NAME} main.c)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} src_code)